WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31560
[Qt] Failing LayoutTests/editing/deleting/5408255.html
https://bugs.webkit.org/show_bug.cgi?id=31560
Summary
[Qt] Failing LayoutTests/editing/deleting/5408255.html
Chang Shu
Reported
2009-11-16 10:42:59 PST
Run the following layout test on Qt platform and it fails. LayoutTests/editing/deleting/5408255.html The root cause of the failure is missing deleteButton image support.
Attachments
fix patch
(5.77 KB, patch)
2009-11-16 18:30 PST
,
Chang Shu
no flags
Details
Formatted Diff
Diff
fix patch
(1.11 KB, patch)
2010-03-22 11:33 PDT
,
Chang Shu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chang Shu
Comment 1
2009-11-16 18:30:52 PST
Created
attachment 43336
[details]
fix patch
Eric Seidel (no email)
Comment 2
2009-11-18 15:39:02 PST
Comment on
attachment 43336
[details]
fix patch LGTM.
WebKit Commit Bot
Comment 3
2009-11-18 16:35:12 PST
Comment on
attachment 43336
[details]
fix patch Clearing flags on attachment: 43336 Committed
r51154
: <
http://trac.webkit.org/changeset/51154
>
WebKit Commit Bot
Comment 4
2009-11-18 16:35:18 PST
All reviewed patches have been landed. Closing bug.
Kent Hansen
Comment 5
2010-03-22 09:14:21 PDT
(In reply to
comment #1
)
> Created an attachment (id=43336) [details] > fix patch
Hi, Since this adds public API, you should add documentation for the DeleteButtonGraphic value. A "\value DeleteButtonGraphic" line under "\enum QWebSettings::WebGraphic" in qwebsettings.cpp, with an appropriate description, is sufficient. Thanks!
Chang Shu
Comment 6
2010-03-22 11:31:50 PDT
Reopen for adding documentation.
Chang Shu
Comment 7
2010-03-22 11:33:30 PDT
Created
attachment 51315
[details]
fix patch Thanks for the comment, Kent. This patch takes care of the documentation.
Simon Hausmann
Comment 8
2010-03-22 14:42:10 PDT
Comment on
attachment 51315
[details]
fix patch r+, but feel free to elaborate a bit more where this is used. Users will ask: "What's a delete button?"
Chang Shu
Comment 9
2010-03-25 06:45:30 PDT
Manually committed the patch after adding more descriptions as suggested by Simon. Committed revision 56537.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug