2009-11-18  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Eric Seidel.

        [Qt] Update expected result after Qt4.6 upgrade.
        https://bugs.webkit.org/show_bug.cgi?id=31560

        Test: LayoutTests/editing/deleting/5408255.html

        * platform/qt/editing/deleting/5408255-expected.txt:
2009-11-18  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] Add support for displaying deleteButton.
        https://bugs.webkit.org/show_bug.cgi?id=31560

        Test: LayoutTests/editing/deleting/5408255.html

        * WebCore.qrc:
        * platform/graphics/qt/ImageQt.cpp:
        (loadResourcePixmap):
2009-11-18  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] Add support for displaying deleteButton.
        https://bugs.webkit.org/show_bug.cgi?id=31560

        Test: LayoutTests/editing/deleting/5408255.html

        * Api/qwebsettings.cpp:
        (graphics):
        * Api/qwebsettings.h:

Canonical link: https://commits.webkit.org/42583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51154 268f45cc-cd09-0410-ab3c-d52691b4dbfc